Update CMakeLists.txt and 2 plugins from far2l

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ string(ASCII 27 Esc)
 set(ColorNormal "${Esc}[m")
 set(ColorRed "${Esc}[1;31m")
 
+include(GNUInstallDirs)
+
 # just to force reconfigure if packaging/version changed
 configure_file(${CMAKE_SOURCE_DIR}/packaging/version ${CMAKE_BINARY_DIR}/packaging/version @ONLY)
 
@@ -27,9 +29,9 @@ string(REGEX REPLACE "^[0-9]+\\.([0-9]+).*" "\\1" VERSION_MINOR "${VERSION}")
 string(REGEX REPLACE "^[0-9]+\\.[0-9]+\\.(.*)" "\\1" VERSION_PATCH "${VERSION}")
 
 if("${VERSION_MAJOR}" STREQUAL "" OR "${VERSION_MAJOR}" STREQUAL "${VERSION}"
- OR "${VERSION_MINOR}" STREQUAL "" OR "${VERSION_MINOR}" STREQUAL "${VERSION}"
- OR "${VERSION_PATCH}" STREQUAL "" OR "${VERSION_PATCH}" STREQUAL "${VERSION}")
-    message(FATAL_ERROR "${ColorRed}packaging/version is corrupted, please write actual X.Y.Z version into it.${ColorNormal}")
+    OR "${VERSION_MINOR}" STREQUAL "" OR "${VERSION_MINOR}" STREQUAL "${VERSION}"
+    OR "${VERSION_PATCH}" STREQUAL "" OR "${VERSION_PATCH}" STREQUAL "${VERSION}")
+        message(FATAL_ERROR "${ColorRed}packaging/version is corrupted, please write actual X.Y.Z version into it.${ColorNormal}")
 endif()
 
 find_package(Git)
@@ -97,7 +99,7 @@ endif()
 # EACP disabled by default for now as FAR's GetCodePageInfo rejects all multibyte charsets due to BUGBUG.
 # Uncomment EACP-stuff here when that will be fixed. See https://github.com/elfmz/far2l/issues/1179
 #if (NOT DEFINED EACP)
-#    set(EACP "YES")
+#   set(EACP "YES")
 #endif()
 
 if (NOT DEFINED LEGACY)
@@ -110,8 +112,10 @@ elseif(FARFTP)
 endif()
 
 #if (NOT EACP)
-#    message(STATUS "${ColorRed}Building without East Asian codepages support due to EACP=${EACP}${ColorNormal}")
+#   message(STATUS "${ColorRed}Building without East Asian codepages support due to EACP=${EACP}${ColorNormal}")
 #endif()
+
+# set(RM rm) actually not needed: use $(CMAKE_COMMAND) -E remove
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
     set(M4_NAME gm4)
@@ -161,9 +165,13 @@ else()
 endif()
 
 if (CMAKE_SYSTEM_NAME MATCHES "CYGWIN")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE -D_BSD_SOURCE -D_XOPEN_SOURCE=600")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GNU_SOURCE -D_BSD_SOURCE -D_XOPEN_SOURCE=600")
-  message(STATUS "Running under cygwin, wow!")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE -D_BSD_SOURCE -D_XOPEN_SOURCE=600")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -D_GNU_SOURCE -D_BSD_SOURCE -D_XOPEN_SOURCE=600")
+    message(STATUS "Running under cygwin, wow!")
+endif()
+
+if (CMAKE_SYSTEM_NAME MATCHES "Haiku")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE -D_DEFAULT_SOURCE -Wno-attributes")
 endif()
 
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
@@ -178,8 +186,8 @@ else()
 endif()
 
 if(CMAKE_VERSION VERSION_GREATER "3.3")
-  cmake_policy(SET CMP0063 NEW)
-  cmake_policy(SET CMP0057 NEW)
+    cmake_policy(SET CMP0063 NEW)
+    cmake_policy(SET CMP0057 NEW)
 endif()
 
 include_directories(utils/include)
@@ -199,6 +207,47 @@ if (NOT ${USEWX})
     message(STATUS "Building without GUI/wxWidgets backend due to USEWX=${USEWX}")
 else()
     message(STATUS "Building with GUI/wxWidgets backend")
+    if (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+        if (DEFINED wxWidgets_CONFIG_EXECUTABLE)
+            message(STATUS "Using pre-defined wx config: ${wxWidgets_CONFIG_EXECUTABLE}")
+
+        elseif(EXISTS "/usr/local/bin/wxgtk3u-3.2-config")
+            set(wxWidgets_CONFIG_EXECUTABLE "/usr/local/bin/wxgtk3u-3.2-config")
+            set(wxWidgets_wxrc_EXECUTABLE "/usr/local/bin/wxrc-gtk3u-3.2")
+            message(STATUS "Using known location of wx-config 3.2")
+
+        elseif(EXISTS "/usr/local/bin/wxgtk3u-3.1-config")
+            set(wxWidgets_CONFIG_EXECUTABLE "/usr/local/bin/wxgtk3u-3.1-config")
+            set(wxWidgets_wxrc_EXECUTABLE "/usr/local/bin/wxrc-gtk3u-3.1")
+            message(STATUS "Using known location of wx-config 3.1")
+
+        elseif (EXISTS "/usr/local/bin/wxgtk3u-3.0-config")
+            set(wxWidgets_CONFIG_EXECUTABLE "/usr/local/bin/wxgtk3u-3.0-config")
+            set(wxWidgets_wxrc_EXECUTABLE "/usr/local/bin/wxrc-gtk3u-3.0")
+            message(STATUS "Using known location of wx-config 3.0")
+
+        else()
+            message(STATUS "No wxgtk3u-3.*-config in expected locations")
+        endif()
+
+    elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+        if (EXISTS "/opt/local/Library/Frameworks/wxWidgets.framework/Versions/wxWidgets/3.2/bin/wx-config")
+            # MacPorts
+            set(wxWidgets_CONFIG_EXECUTABLE "/opt/local/Library/Frameworks/wxWidgets.framework/Versions/wxWidgets/3.2/bin/wx-config")
+            set(wxWidgets_wxrc_EXECUTABLE "/opt/local/Library/Frameworks/wxWidgets.framework/Versions/wxWidgets/3.2/bin/wxrc")
+            message(STATUS "Using known location of wx-config 3.2")
+
+        elseif (EXISTS "/opt/local/Library/Frameworks/wxWidgets.framework/Versions/wxWidgets/3.1/bin/wx-config")
+            # MacPorts
+            set(wxWidgets_CONFIG_EXECUTABLE "/opt/local/Library/Frameworks/wxWidgets.framework/Versions/wxWidgets/3.1/bin/wx-config")
+            set(wxWidgets_wxrc_EXECUTABLE "/opt/local/Library/Frameworks/wxWidgets.framework/Versions/wxWidgets/3.1/bin/wxrc")
+            message(STATUS "Using known location of wx-config 3.1")
+
+        else()
+            message(STATUS "No wx-config in expected locations")
+        endif()
+    endif()
+
     add_subdirectory(WinPort/src/Backend/WX)
 endif()
 
@@ -247,7 +296,7 @@ if (NOT DEFINED ALIGN OR ALIGN)
 else()
     message(STATUS "${ColorRed}ALIGN plugin disabled due to ALIGN=${ALIGN}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/align/plug/align.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/align/plug/align.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -257,7 +306,7 @@ if (NOT DEFINED AUTOWRAP OR AUTOWRAP)
 else()
     message(STATUS "${ColorRed}AUTOWRAP plugin disabled due to AUTOWRAP=${AUTOWRAP}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/autowrap/plug/autowrap.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/autowrap/plug/autowrap.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -267,7 +316,7 @@ if (NOT DEFINED CALC OR CALC)
 else()
     message(STATUS "${ColorRed}CALC plugin disabled due to CALC=${CALC}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/calc/plug/calc.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/calc/plug/calc.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -277,7 +326,7 @@ if (NOT DEFINED COLORER OR COLORER)
 else()
     message(STATUS "${ColorRed}COLORER plugin disabled due to COLORER=${COLORER}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/colorer/plug/colorer.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/colorer/plug/colorer.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -287,7 +336,7 @@ if (NOT DEFINED COMPARE OR COMPARE)
 else()
     message(STATUS "${ColorRed}COMPARE plugin disabled due to COMPARE=${COMPARE}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/compare/plug/compare.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/compare/plug/compare.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -297,7 +346,7 @@ if (NOT DEFINED DRAWLINE OR DRAWLINE)
 else()
     message(STATUS "${ColorRed}DRAWLINE plugin disabled due to DRAWLINE=${DRAWLINE}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/drawline/plug/drawline.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/drawline/plug/drawline.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -307,7 +356,7 @@ if (NOT DEFINED EDITCASE OR EDITCASE)
 else()
     message(STATUS "${ColorRed}EDITCASE plugin disabled due to EDITCASE=${EDITCASE}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/editcase/plug/editcase.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/editcase/plug/editcase.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -317,7 +366,7 @@ if (NOT DEFINED EDITORCOMP OR EDITORCOMP)
 else()
     message(STATUS "${ColorRed}EDITORCOMP plugin disabled due to EDITORCOMP=${EDITORCOMP}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/editorcomp/plug/editorcomp.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/editorcomp/plug/editorcomp.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -327,7 +376,7 @@ if (DEFINED FARFTP AND FARFTP)
     add_subdirectory (farftp)
 else()
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/farftp/plug/farftp.far-plug-mb)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/farftp/plug/farftp.far-plug-mb)
         " COMPONENT system)
 endif()
 
@@ -337,7 +386,7 @@ if (NOT DEFINED FILECASE OR FILECASE)
 else()
     message(STATUS "${ColorRed}FILECASE plugin disabled due to FILECASE=${FILECASE}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/filecase/plug/filecase.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/filecase/plug/filecase.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -347,7 +396,7 @@ if (NOT DEFINED INCSRCH OR INCSRCH)
 else()
     message(STATUS "${ColorRed}Building without <INCSRCH> plugin due to INCSRCH=${INCSRCH}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/incsrch/plug/incsrch.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/incsrch/plug/incsrch.far-plug-wide)
         " COMPONENT system)
 endif()
 
@@ -357,35 +406,28 @@ if (NOT DEFINED INSIDE OR INSIDE)
 else()
     message(STATUS "${ColorRed}INSIDE plugin disabled due to INSIDE=${INSIDE}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/inside/plug/inside.far-plug-mb)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/inside/plug/inside.far-plug-mb)
         " COMPONENT system)
 endif()
 
 if (NOT DEFINED MULTIARC OR MULTIARC)
     message(STATUS "MULTIARC plugin enabled")
-    # workaround for brew's/macports' libarchive
-    if(IS_DIRECTORY "/usr/local/opt/libarchive/include")
-        set(LibArchive_INCLUDE_DIR "/usr/local/opt/libarchive/include")
-        set(LibArchive_LIBRARY "/usr/local/opt/libarchive/lib/libarchive.dylib")
-    elseif(EXISTS "/opt/local/lib/libarchive.dylib")
-        set(LibArchive_LIBRARY "/opt/local/lib/libarchive.dylib")
-    endif()
-
-    find_package(LibArchive)
+    find_package(PkgConfig REQUIRED)
+    pkg_search_module(LibArchive QUIET libarchive)
     if(NOT LibArchive_FOUND)
         message(WARNING "${ColorRed}libarchive not found, multiarc will have weaker archives support. Its recommended to install libarchive-dev and reconfigure far2m.${ColorNormal}")
     endif()
 
-    find_package(PCRE)
+    pkg_search_module(PCRE QUIET libpcre)
     if(NOT PCRE_FOUND)
-        message(WARNING "${ColorRed}libpcre not found, multiarc will have no custom archives support. Install libpcre and reconfigure far2m if you need that functionality.${ColorNormal}")
+        message(WARNING "${ColorRed}libpcre not found, multiarc will have no regexp support in custom archive format descriptions. Install libpcre and reconfigure far2m if you need that functionality.${ColorNormal}")
     endif()
 
     add_subdirectory (multiarc)
 else()
     message(STATUS "${ColorRed}MULTIARC plugin disabled due to MULTIARC=${MULTIARC}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/multiarc/plug/multiarc.far-plug-mb)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/multiarc/plug/multiarc.far-plug-mb)
         " COMPONENT system)
 endif()
 
@@ -430,7 +472,7 @@ if (NOT DEFINED NETROCKS OR NETROCKS)
 else()
     message(STATUS "${ColorRed}NETROCKS plugin disabled due to NETROCKS=${NETROCKS}${ColorNormal}")
     install(CODE "
-        execute_process(COMMAND rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/NetRocks/plug/NetRocks.far-plug-wide)
+        execute_process(COMMAND ${CMAKE_COMMAND} -E rm -f ${CMAKE_INSTALL_PREFIX}/lib/far2m/Plugins/NetRocks/plug/NetRocks.far-plug-wide)
         " COMPONENT system)
 endif()
 
