Add build option -DUSELUA ('yes' by default)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,10 @@ if (NOT DEFINED USEWX)
     set(USEWX "YES")
 endif()
 
+if (NOT DEFINED USELUA)
+    set(USELUA "YES")
+endif()
+
 if (NOT DEFINED UNRAR)
     set(UNRAR "bundled")
 endif()
@@ -270,24 +274,29 @@ endif()
 ##############################
 # plugins directives
 
-function (FindLuaIncludes)
-    if (NOT DEFINED LUAINC)
-        foreach(PP "luajit-2.1" "luajit-2.0" "lua5.1")
-            find_path(INC ${PP}/lua.h)
-            if (NOT ${INC} STREQUAL INC-NOTFOUND)
-                set(LUAINC ${INC}/${PP} CACHE INTERNAL "Lua #include path" FORCE)
-                return()
-            endif()
-        endforeach()
-        message(STATUS "${ColorRed}Neither of LuaJIT/Lua5.1 #include path was found${ColorNormal}")
-    endif()
-endfunction()
+if (${USELUA})
+  function (FindLuaIncludes)
+      if (NOT DEFINED LUAINC)
+          foreach(PP "luajit-2.1" "luajit-2.0" "lua5.1")
+              find_path(INC ${PP}/lua.h)
+              if (NOT ${INC} STREQUAL INC-NOTFOUND)
+                  set(LUAINC ${INC}/${PP} CACHE INTERNAL "Lua #include path" FORCE)
+                  return()
+              endif()
+          endforeach()
+          message(STATUS "${ColorRed}Neither of LuaJIT/Lua5.1 #include path was found${ColorNormal}")
+      endif()
+  endfunction()
 
-add_subdirectory (luafar)
-if (DEFINED LUAFAR_OK)
-  add_subdirectory (luamacro)
+  message(STATUS "LUAFAR and LUAMACRO enabled")
+  add_subdirectory (luafar)
+  if (DEFINED LUAFAR_OK)
+    add_subdirectory (luamacro)
+  else()
+    message(STATUS "${ColorRed}LuaMacro plugin disabled due to missing LuaFAR${ColorNormal}")
+  endif()
 else()
-  message(STATUS "${ColorRed}LuaMacro plugin disabled due to missing LuaFAR${ColorNormal}")
+  message(STATUS "${ColorRed}LuaFAR and LuaMacro disabled due to -DUSELUA=${USELUA}${ColorNormal}")
 endif()
 
 if (NOT DEFINED ALIGN OR ALIGN)
