--- a/netcfg/CMakeLists.txt
+++ b/netcfg/CMakeLists.txt
@@ -41,7 +41,7 @@ src/common/netlink.c
 endif()
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_C_STANDARD 17)
+# set(CMAKE_C_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
