LuaMacro: add a global table MacroData for scripts' use

--- a/luafar/CMakeLists.txt
+++ b/luafar/CMakeLists.txt
@@ -61,8 +61,7 @@ foreach(elem "luafar2m_manual.chm" "macroapi_manual_linux.chm")
   configure_file("manuals/${elem}" "${INSTALL_DIR}/Manuals/${elem}" COPYONLY)
 endforeach()
 
-add_custom_command(TARGET ${PROJECT_NAME}
-  POST_BUILD
+add_custom_target(lua_share ALL
   COMMAND "cp" "-rf" "${CMAKE_CURRENT_SOURCE_DIR}/lua_share" "${INSTALL_DIR}/Plugins/luafar/"
 )
 
