Rework CMakeLists for luafar and luamacro

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -275,26 +275,10 @@ endif()
 # plugins directives
 
 if (${USELUA})
-  function (FindLuaIncludes)
-      if (NOT DEFINED LUAINC)
-          foreach(PP "luajit-2.1" "luajit-2.0" "lua5.1")
-              find_path(INC ${PP}/lua.h)
-              if (NOT ${INC} STREQUAL INC-NOTFOUND)
-                  set(LUAINC ${INC}/${PP} CACHE INTERNAL "Lua #include path" FORCE)
-                  return()
-              endif()
-          endforeach()
-          message(STATUS "${ColorRed}Neither of LuaJIT/Lua5.1 #include path was found${ColorNormal}")
-      endif()
-  endfunction()
-
+  find_package(LibLua REQUIRED)
   message(STATUS "LUAFAR and LUAMACRO enabled")
   add_subdirectory (luafar)
-  if (DEFINED LUAFAR_OK)
-    add_subdirectory (luamacro)
-  else()
-    message(STATUS "${ColorRed}LuaMacro plugin disabled due to missing LuaFAR${ColorNormal}")
-  endif()
+  add_subdirectory (luamacro)
 else()
   message(STATUS "${ColorRed}LuaFAR and LuaMacro disabled due to -DUSELUA=${USELUA}${ColorNormal}")
 endif()
