Rework CMakeLists for luafar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -276,6 +276,10 @@ endif()
 
 if (${USELUA})
   find_package(LibLua REQUIRED)
+  find_package(LibUuid)
+  if (NOT LibUuid_FOUND)
+    message(STATUS "Building without libuuid due to it was not found")
+  endif()
   message(STATUS "LUAFAR and LUAMACRO enabled")
   add_subdirectory (luafar)
   add_subdirectory (luamacro)
